[tool.poetry]
name = "github-test"
version = "0.1.0"
description = ""
authors = ["Tsuyoshi Ishida <tishida@ioa.s.u-tokyo.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
