[tool.poetry]
name = "github-test"
version = "0.1.0"
description = "Test GitHub functions"
authors = ["Tsuyoshi Ishida <tishida@ioa.s.u-tokyo.ac.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
